Archive2/4b/2a7cfdc92ba3cc/output/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include <iostream> 
   ^
main.cpp: In constructor 'Foo::Foo()':
main.cpp:5:8: error: 'cout' is not a member of 'std'
        std :: cout  <<  "static construtor \ n " ; 
        ^
main.cpp:5:25: error: unknown escape sequence: '\040'
        std :: cout  <<  "static construtor \ n " ; 
                         ^
main.cpp: In destructor 'Foo::~Foo()':
main.cpp:8:8: error: 'cout' is not a member of 'std'
        std :: cout  <<  "static destruidor \ n " ; 
        ^
main.cpp:8:25: error: unknown escape sequence: '\040'
        std :: cout  <<  "static destruidor \ n " ; 
                         ^
main.cpp: At global scope:
main.cpp:11:10: error: expected unqualified-id before '/' token
 Foo f ;  / / static objeto 
          ^
